added GET api for all exopnenet
