# docs/swagger.json
@@ -5,6 +5,30 @@
     },
     "paths": {
         "/exoplanets": {
+            "get": {
+                "description": "This end point returns list of all exoplanetts",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exoplanets"
+                ],
+                "summary": "Get All exoplanete",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Exoplanet"
+                        }
+                    },
+                    "404": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new product",
                 "consumes": [
